name:                orbits
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Orbits.System
                     , Orbits.Units
                     , Orbits.Simulation
                     , Orbits.Simulation.TensorFlow
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , tensorflow
                     , tensorflow-core-ops
                     , tensorflow-ops
                     , tensorflow-logging
                     , random
                     , text
                     , vector
                     , linear
                     , dimensional
                     , lens
                     , bytestring
  default-language:    Haskell2010

executable orbits
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , orbits
                     , tensorflow
                     , tensorflow-core-ops
                     , tensorflow-ops
                     , tensorflow-logging
                     , random
                     , text
                     , vector
                     , linear
                     , dimensional
                     , lens
                     , bytestring
                     , yaml
                     , cassava
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
